--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,11 +1,11 @@
 [
     {
       "title": "Task 1: Basic HTML Styling",
-      "files": ["works/task1.html", "tasks/task1.2.html"]
+      "files": ["tasks/task1.html", "tasks/task1.2.html"]
     },
     {
       "title": "Task 2: Responsive Layout",
-      "files": ["works/task2.html", "tasks/task2.css"]
+      "files": ["tasks/task2.html", "tasks/task2.css"]
     },
     {
       "title": "Task 3: welcome to js",
@@ -13,7 +13,7 @@
     },
      {
       "title": "Task 4: calculator using js",
-      "files": ["works/task4.html"]
+      "files": ["tasks/task4.html"]
     },
       {
       "title": "Task 5: Github Integration",
